# rustcurr

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  rust.yml
src/: cache.rs  lib.rs  main.rs  setup.rs  structs.rs
src/api/: Cargo.toml  errors.rs  lib.rs  mod.rs  process.rs  structs.rs
src/cli/: mod.rs  process.rs  structs.rs  utils.rs
src/config/: process.rs  structs.rs
src/converter/: process.rs  structs.rs
