[package]
name = "rustcurr"
version = "0.1.0"
edition = "2021"
authors = ["Cyprian Szczepański <cpprian456@gmail.com>"]
description = """
A command-line tool written in Rust to converts user amounts between 
different curriencies using real-time exchange rate data from ExchangeRate-API.
"""
keywords = ["currency", "ExchangeRate-API", "exchange"]
license = "Mozilla"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
path = "src/main.rs"
name = "rustcurr"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
reqwest = { version = "0.11.26", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
anyhow = "1.0.81"
dotenv = "0.15.0"
